--- a/site-template/css/tooplate-little-fashion.css
+++ b/site-template/css/tooplate-little-fashion.css
@@ -1,36 +1,27 @@
-/*
-
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
-
-*/
-
-
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-  --white-color:                #FFFFFF;
-  --primary-color:              #FF4400;
-  --section-bg-color:           #f0f8ff;
-  --dark-color:                 #000000;
-  --grey-color:                 #d0d1d1;
-  --p-color:                    #717275;
+  --white-color: #ffffff;
+  --primary-color: #ff4400;
+  --section-bg-color: #dadada;
+  --dark-color: #000000;
+  --grey-color: #d0d1d1;
+  --p-color: #717275;
 
-  --body-font-family:           'Inter', sans-serif;
+  --body-font-family: "Inter", sans-serif;
 
-  --h5-font-size:               24px;
-  --p-font-size:                20px;
-  --copyright-text-font-size:   16px;
-  --product-link-font-size:     14px;
-  --custom-link-font-size:      12px;
+  --h5-font-size: 24px;
+  --p-font-size: 20px;
+  --copyright-text-font-size: 16px;
+  --product-link-font-size: 14px;
+  --custom-link-font-size: 12px;
 
-  --font-weight-thin:           100;
-  --font-weight-light:          300;
-  --font-weight-normal:         400;
-  --font-weight-bold:           700;
-  --font-weight-black:          900;
+  --font-weight-thin: 100;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
+  --font-weight-black: 900;
 }
 
 body,
@@ -49,9 +40,9 @@ html {
 }
 
 body {
-    background: var(--white-color);
-    font-family: var(--body-font-family);    
-    position: relative;
+  background: var(--white-color);
+  font-family: var(--body-font-family);
+  position: relative;
 }
 
 /*---------------------------------------
@@ -112,7 +103,7 @@ p {
   font-weight: var(--font-weight-light);
 }
 
-a, 
+a,
 button {
   touch-action: manipulation;
   transition: all 0.3s;
@@ -195,7 +186,7 @@ strong {
 }
 
 .spinner::before {
-  content: '';
+  content: "";
   box-sizing: border-box;
   position: absolute;
   top: 50%;
@@ -207,11 +198,13 @@ strong {
   border-radius: 50%;
   border: 1px solid #959595;
   border-top-color: var(--white-color);
-  animation: spinner .9s linear infinite;
+  animation: spinner 0.9s linear infinite;
 }
 
 @keyframes spinner {
-  to {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /*---------------------------------------
@@ -223,7 +216,7 @@ strong {
   color: var(--white-color);
   font-size: var(--copyright-text-font-size);
   text-transform: uppercase;
-  padding: 16.50px 20px;
+  padding: 16.5px 20px;
 }
 
 .social-btn {
@@ -338,8 +331,10 @@ strong {
   transition: transform 300ms linear;
 }
 
-.navbar span, h2 span, h4 span {
-	color: var(--primary-color);
+.navbar span,
+h2 span,
+h4 span {
+  color: var(--primary-color);
 }
 
 .navbar.headroom--not-top {
@@ -382,7 +377,7 @@ strong {
   width: 100%;
   height: 2px;
   background: var(--grey-color);
-  content: '';
+  content: "";
   opacity: 0;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
   -moz-transition: opacity 0.3s, -moz-transform 0.3s;
@@ -392,7 +387,7 @@ strong {
   transform: translateY(10px);
 }
 
-.navbar .nav-link.active::after, 
+.navbar .nav-link.active::after,
 .navbar .nav-link:hover::after {
   opacity: 1;
   -webkit-transform: translateY(0px);
@@ -405,7 +400,7 @@ strong {
   color: var(--primary-color);
 }
 
-.nav-link:focus, 
+.nav-link:focus,
 .nav-link:hover {
   color: var(--p-color);
 }
@@ -465,7 +460,7 @@ strong {
   background: var(--dark-color);
   width: 30px;
   height: 2px;
-  content: '';
+  content: "";
 }
 
 .navbar-toggler .navbar-toggler-icon:before {
@@ -665,7 +660,7 @@ strong {
 }
 
 .slick-testimonial-caption {
-  quotes: '❝' '❞';
+  quotes: "❝" "❞";
   position: relative;
   padding: 5rem 7rem;
 }
@@ -744,8 +739,8 @@ section {
 }
 
 .about .nav-pills .nav-link:hover,
-.about .nav-pills .nav-link.active, 
-.about .nav-pills .show>.nav-link {
+.about .nav-pills .nav-link.active,
+.about .nav-pills .show > .nav-link {
   background: transparent;
   border-left-color: var(--primary-color);
   color: var(--primary-color);
@@ -777,7 +772,7 @@ button:focus:not(:focus-visible) {
 }
 
 .accordion-body {
-  border-top: 1px solid rgba(0,0,0,.125);
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .accordion-button {
@@ -803,7 +798,7 @@ button:focus:not(:focus-visible) {
 .team-thumb {
   background: var(--white-color);
   position: relative;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   padding: 42px 32px;
 }
 
@@ -898,7 +893,7 @@ button:focus:not(:focus-visible) {
 }
 
 .product-thumb:hover .product-image {
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 }
 
 .product-top {
@@ -967,12 +962,12 @@ button:focus:not(:focus-visible) {
   font-weight: var(--font-weight-normal);
 }
 
-.form-floating>label {
+.form-floating > label {
   color: var(--grey-color);
   font-weight: var(--font-weight-normal);
 }
 
-.contact-form button[type='submit'] {
+.contact-form button[type="submit"] {
   background: var(--dark-color);
   border: none;
   border-radius: 100px;
@@ -982,7 +977,7 @@ button:focus:not(:focus-visible) {
   padding: 16px;
 }
 
-.contact-form button[type='submit']:hover {
+.contact-form button[type="submit"]:hover {
   background: var(--primary-color);
 }
 
@@ -1179,4 +1174,3 @@ button:focus:not(:focus-visible) {
     bottom: 0;
   }
 }
-
