--- a/site-template/css/slick.css
+++ b/site-template/css/slick.css
@@ -68,9 +68,10 @@
   display: none;
   float: left;
   height: auto;
-  max-height: 90vh;
+  max-height: auto;
   min-height: 1px;
 }
+
 [dir="rtl"] .slick-slide {
   float: right;
 }
