--- a/site-template/css/tooplate-little-fashion.css
+++ b/site-template/css/tooplate-little-fashion.css
@@ -1108,6 +1108,7 @@ button:focus:not(:focus-visible) {
 
   .lead {
     font-size: 16px;
+    font-weight: 300;
   }
 
   .navbar-expand-lg .navbar-nav .nav-link {
